--- a/StudiTradeV2/app/src/main/res/values/strings.xml
+++ b/StudiTradeV2/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="title_activity_profile">ProfileActivity</string>
+    <string name="title_activity_sell_files">SellFilesActivity</string>
 </resources>
