--- a/StudiTradeV2/app/src/main/res/values/strings.xml
+++ b/StudiTradeV2/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="title_activity_profile">ProfileActivity</string>
     <string name="title_activity_sell_files">SellFilesActivity</string>
+    <string name="title_activity_pdf_viewer">PdfViewerActivity</string>
 </resources>
